[package]
name = "break-a-loop"
version = "1.0.0"
edition = "2021"
authors = ["InfiniteCoder <nayka.0.lobach.01@gmail.com>"]
description = "A game for Underground Game Jam #1"
readme = "README.md"
repository = "https://github.com/InfiniteCoder01/BreakALoop/"
license = "Apache-2.0"
keywords = ["games", "raylib"]
categories = ["games"]

[dependencies]
anyhow = "1.0.72"
lang-c = "0.15.0"

[dependencies.raylib]
version = "4.5.0"
git = "https://github.com/litten2up/raylib-rs"
branch = "4.5.0"
